...
    android:background="@color/gray_CDC9C9"
    tools:context="com.mathheals.euvou.controller.event_consultation.EventConsultation">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_events"
        android:gravity="center"
        android:id="@+id/search_radio_group"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <RadioButton android:id="@+id/radio_events"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"/>
    </RadioGroup>

    <ListView
        android:id="@+id/events_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_radio_group"
        android:layout_marginTop="25dp">
    </ListView>

...
