<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mathheals.euvou.controller.home_page.HomePage">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="Pesquisa"
        app:showAsAction="always"
        android:onClick="searchOnclick"/>

    <item android:id="@+id/edit_register"
        android:title="Alterar cadastro"
        app:showAsAction="never"/>

    <item android:id="@+id/register_event"
        android:title="Cadastrar Evento"
        app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="Configurações"
        app:showAsAction="never" />

    <item android:id="@+id/myEvents"
        android:title="Meus Eventos"
        app:showAsAction="never" />

    <item android:id="@+id/logout"
        android:title="Sair"
        app:showAsAction="never" />

</menu>
